--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    padding-top: 10px;
+    padding-top: 5px;
     position: fixed;
     background: rgba(255,255,255,1);
     margin: 0;
@@ -31,7 +31,7 @@
 
 .header-nav-buttons {
     margin: 0 15px;
-    font-size: 1.2em;
+    font-size: 1em;
     flex-grow: 1;
 }
 
@@ -54,21 +54,22 @@
 \*   -------------- */
 
 .header-hero-image {
-    background: url(../images/hero.jpg) no-repeat center;
+    background: linear-gradient(rgba( 0, 0, 0, 0.3 ), rgba( 0, 0, 0, 0.3 )), url(../images/hero.jpg) no-repeat center;
     background-size: cover;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     height: 600px;
-    background-color: rgba(0, 0, 0, 0.4)
+    min-height: 200px;
 }
 
 .header-hero-image-title {
     color: white;
     font-family: 'Slabo 27px', serif;
     text-align: center;
-    font-size: 5em;
-    text-shadow: 0.03em 0.01em #414351;
+    font-size: 4em;
+    margin: 0.5em;
 }
 
 /*  ----------------------  *\
@@ -80,57 +81,72 @@ h1, h2, h3, h4 {
   font-family: 'Slabo 27px', serif;
 }
 
-.main-content-index {
+.main-content-title {
+    display: flex;
+    justify-content: center;
+    font-size: 3em;
+    font-family: 'Slabo 27px', serif;
+    color:grey;
+    margin: 0.5em
+}
+
+
+.main-content-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-content-section {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  margin: 2em 1em;
 }
 
-.main-content-container-first img {
+.main-content-section-reverse{
+    flex-wrap: wrap-reverse;
+}
+
+.main-content-image {
   width: 600px;
   height: 367px;
+  min-width: 320px;
 }
 
-.main-content-container-left {
-  color: white;
+.main-content-text{
+    color: white;
+    z-index: 1;
+    width: 400px;
+    padding: 30px;
+    flex-grow: 1;
+}
+
+.main-content-text-right {
   background-color: coral;
-  z-index: 1;
-  width: 400px;
-  padding: 30px;
   margin-left: -60px;
   margin-top: 50px;
 }
 
-.main-content-container-right {
-  color: white;
+.main-content-text-left {
   background-color: teal;
-  z-index: 1;
-  width: 400px;
-  padding: 30px;
   margin-right: -60px;
   margin-top: 50px;
-}
-
-.main-content-title-right {
-  text-align: right;
 }
 
 /*  ----------------------  *\
     Main - Part 2 - Instagram
 \*   --------------------- */
 
-.main-content-container-instagram-title {
-    display: flex;
-    justify-content: center;
-    font-size: 2em;
-    font-family: 'Slabo 27px', serif;
-    color:grey;
-    }
 
+.main-content-instagram{
+    margin: 2em 1em;
+}
 
-.main-content-container-instagram-line-one {
+.main-content-instagram-photo {
     display: flex;
     align-items: stretch;
     flex-wrap: wrap;
@@ -139,7 +155,7 @@ h1, h2, h3, h4 {
 }
 
 
-.main-content-container-instagram-photo img {
+.main-content-instagram-photo img {
     width: 200px;
     height: 200px;
  -webkit-transition: all 0.3s ease-in-out;
@@ -148,14 +164,13 @@ h1, h2, h3, h4 {
     -ms-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     opacity: 0.8;
-
 }
-.main-content-container-instagram-photo img:hover{
-        -webkit-transform: scale(1.1);
-        -moz-transform: scale(1.1);
-        -o-transform: scale(1.1);
-        transform: scale(1.1);
-        opacity: 1.3 ;
+.main-content-instagram-photo img:hover{
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+    opacity: 1.3 ;
 }
 
 /*  --------------   *\
@@ -164,11 +179,11 @@ h1, h2, h3, h4 {
 
 footer {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: column;
     align-items: center;
     /*border: 2px solid green;*/
-    padding-top: 10px;
+    padding:20px;
 }
 
 .fa {
@@ -191,3 +206,7 @@ footer {
 
 
 
+
+.header-hero-image-logo {
+    height: 20em
+}
