--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,6 @@ h1, h2, h3, h4 {
 
 }
 
-
 .main-content-instagram-photo img {
     width: 200px;
     height: 200px;
@@ -183,9 +182,9 @@ h1, h2, h3, h4 {
 \*   -------------- */
 
 
-                                  /*  --------------   *\
-                                          Nos burgers
-                                  \*   -------------- */
+/*  -------------------   *\
+     Page 2 - Nos burgers
+\*   -------------------- */
 
 
 .main-content-products {
