--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@
     padding: 0;
 }
 
+h1, h2, h3, h4 {
+  font-family: 'Slabo 27px', serif;
+}
+
+p {
+  font-family: 'Lora', serif;
+}
+
 
 /*  --------------   *\
         Navbar
@@ -75,10 +83,6 @@
      Main - Part 1 - Concept
 \*   --------------------- */
 
-
-h1, h2, h3, h4 {
-  font-family: 'Slabo 27px', serif;
-}
 
 .main-content-index {
   display: flex;
