--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,103 @@
     font-size: 1.5em
 }
 
+.nav-responsive {
+    display: none;
+}
+/*RESPONSIVE NAV */
+
+@media screen and (max-width: 375px) {
+    .header-nav{
+        display: none;
+    }
+
+    .main-content-container {
+        margin:0;
+        padding: 0;
+    }
+    #menu-deroulant, #menu-deroulant ul {
+        padding: 10px;
+        margin: 0;
+        list-style: none;
+    }
+    #menu-deroulant {
+        /* on centre le menu dans la page */
+        text-align: center;
+    }
+    #menu-deroulant li {
+        /* on place les liens du menu horizontalement */
+        display: inline-block;
+    }
+    #menu-deroulant ul li {
+        /* on enlève ce comportement pour les liens du sous menu */
+        display: inherit;
+        color: white;
+    }
+    #menu-deroulant a {
+        text-decoration: none;
+        display: block;
+        color:white;
+    }
+    #menu-deroulant ul {
+        position: absolute;
+        /* on cache les sous menus complètement sur la gauche */
+        left: -999em;
+        text-align: left;
+        z-index: 1000;
+        line-height: 25px;
+    }
+    #menu-deroulant li:hover ul {
+        /* Au survol des li du menu on replace les sous menus */
+        left: auto;
+        background-color: black;
+        color: white;
+    }
+    .nav-responsive {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        padding-top: 5px;
+        z-index: 2;
+        background-color: black;
+        position: fixed;
+    }
+    .nav-logos {
+        display: flex;
+        justify-content: center;
+        list-style: none;
+        color: white;
+    }
+    .nav-buttons-list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        font-family: 'Slabo 27px', serif;
+        padding: 0;
+    }
+    .nav-buttons {
+        margin: 0 15px;
+        font-size: 1em;
+        flex-grow: 1;
+    }
+    .nav-buttons-links {
+        text-decoration: none;
+        color:white;
+    }
+    .logo {
+        height: 3em;
+    }
+    .nav-buttons-social {
+        color: white;
+        font-size: 1.5em
+    }
+}
+/*fin test*/
+
+
+
+
 /*  --------------   *\
       Hero Image
 \*   -------------- */
@@ -103,10 +200,10 @@
 
 @media screen and (max-width: 375px) {
     .header-hero-image-logo{
-        height: 7em;
+        height: 5em;
     }
     .header-hero-image-title{
-        font-size: 1em
+        font-size: 2em
     }
     .header-hero-image-home{
         height: 300px;
@@ -207,6 +304,12 @@ h1, h2, h3, h4 {
         margin: 0 0 2em 0;
     }
 
+    .main-content-title {
+        font-size: 2em;
+        font-family: 'Slabo 27px', serif;
+        color:grey;
+        margin: 0.4em
+    }
     .main-content-section {
         margin: 0.5em;
     }
@@ -216,20 +319,20 @@ h1, h2, h3, h4 {
         width: 60px;
         flex-grow: 0
     }
-
-    .main-content-title {
-        font-size: 2em;
-        font-family: 'Slabo 27px', serif;
-        color:grey;
-        margin: 0.4em
-    }
 }
 
 @media screen and (max-width: 375px) {
+    .main-content-section{
+        margin: 0;
+    }
+
     .main-content-image {
         width: 400px;
         height: 250px;
         min-width: 320px;
+    }
+    .main-content-text{
+        padding: 20px;
     }
 }
 /*  ----------------------  *\
@@ -271,8 +374,9 @@ h1, h2, h3, h4 {
 }
 
 
+/*
 @media screen and (max-width: 768px){
-    /*INSTAGRAM */
+    INSTAGRAM
 
     .main-content-instagram-photo{
         display: none;
@@ -330,6 +434,7 @@ h1, h2, h3, h4 {
         95% {left:-400%;}
     }
 }
+*/
 
 
 /*  --------------   *\
@@ -342,6 +447,7 @@ h1, h2, h3, h4 {
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     padding:15px;
     color: white;
     margin-top: 1em;
@@ -351,18 +457,29 @@ h1, h2, h3, h4 {
     color: white;
     margin-bottom: 1em;
 }
+@media screen and (max-width: 375px) {
+    .footer{
+        margin-top: 0
+    }
 }
+
 
 
 /*  -------------------   *\
      Page 2 - Nos burgers
 \*   -------------------- */
 
-
-.main-content-products {
-  padding-top: 150px;
+@media screen and (max-width: 768px){
+    .main-content-container-page2{
+        margin: 0;
+    }
 }
 
+@media screen and (max-width: 375px) {
+    .header-hero-image-title-page2{
+        margin-bottom: 1em
+    }
+}
 
 /*  ---------------------------------   *\
     Page 3 - Contact - Nous Trouver
@@ -407,4 +524,151 @@ h1, h2, h3, h4 {
     justify-content: center;
     align-items: center;
     margin-right: 150px;
+}
+
+.main-content-contact {
+    width: 100%;
+    height: 100vh;
+    background: url("../images/facade2.jpg") center no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+}
+
+.main-content-contact-image{
+    /*    width: 350px;*/
+    height: 320px;
+}
+
+.adresse {
+    min-width: 30%;
+    min-height: 20vh;
+    margin-right: 7%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    line-height: 35px;
+    background: rgba(159,164,163,0.5 );
+    text-align: center;
+    word-wrap: break-word;
+    border: 8px double #F5A830 ;
+}
+
+.main-content-contact-elements {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 150px;
+}
+
+/*NOUS TROUVER MODE TABLETTE*/
+
+@media screen and (max-width: 800px) {
+    .main-content-contact {
+        width: auto;
+        height: 100vh;
+        background: url("../images/facade2.jpg") left no-repeat;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        /*border: 2px solid yellow;*/
+    }
+
+    .main-content-contact-elements {
+        width: 80%;
+        height: 80vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        /*border: 2px solid blue;*/
+    }
+    .main-content-contact-image{
+        height: 20vh;
+        background: rgba(159,164,163,0.5 );
+        margin-top: 300px;
+        border: 4px double #F5A830 ;
+
+    }
+    .adresse {
+        min-width: 10%;
+        min-height: 15vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        line-height: 35px;
+        background: rgba(159,164,163,0.5 );
+        text-align: center;
+        word-wrap: break-word;
+        margin-left: 45px;
+        margin-top: 20px;
+        border: 4px double #F5A830 ;
+    }
+
+    .footer{
+        margin:0;
+    }
+}
+
+/*NOUS TROUVER MODE smartphone*/
+
+@media screen and (max-width: 360px) {
+    .main-content-contact {
+        width: auto;
+        height: 100vh;
+        background: url("../images/facade2.jpg") left no-repeat;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        /*border: 2px solid yellow;*/
+    }
+
+    .main-content-contact-elements {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        border: 2px solid blue;
+    }
+    .main-content-contact-image{
+        display: none;
+        /*    min-height: 17vh;
+        background: rgba(159,164,163,0.5 );
+        margin-top: 250px;
+        border: 4px double #F5A830 ;*/
+    }
+
+    .adresse {
+        min-width: 30%;
+        min-height: 25vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        line-height: 20px;
+        background: rgba(159,164,163,0.5 );
+        text-align: center;
+        margin: 0;
+        margin-top: 200px;
+        /*word-wrap: break-word;*/
+        border: 4px double #F5A830 ;
+    }
+
+    .footer{
+        margin:0;
+    }
 }
