--- a/css/style.css
+++ b/css/style.css
@@ -373,68 +373,41 @@ h1, h2, h3, h4 {
     display: none;
 }
 
+.main-content-instagram-responsive{
+    display: none;
+}
 
-/*
+
 @media screen and (max-width: 768px){
     INSTAGRAM
-
-    .main-content-instagram-photo{
+    .main-content-instagram{
         display: none;
     }
-
-    .main-content-title-instagram {
-        display: none;
-    }
-
-    .main-content-instagram-slider-container {
-        display:inline;
-        width: 80%;max-width: 1000px;overflow: hidden;
-    }
-    .main-content-instagram-slider-title {
-        text-shadow: -1px -1px black, 1px 1px black, -1px 0 2px #000;
-        font-family: 'Slabo 27px', serif;
-        font-weight:lighter;
-        text-align: center;
-        line-height:300px;
-        z-index:1;
-        position: absolute;
-        color:white;
-    }
-
-    .main-content-instagram-slider{
+    .main-content-instagram-responsive {
+        height: 250px;
+        background-image: url("../images/insta13.jpg");
+        background-repeat: no-repeat;
         display: flex;
+        background-size: cover;
+        justify-content: space-between;
         align-items: center;
-        text-align: center;
-        position: relative;
-        margin: 0;
-        padding: 0;
-        font-size: 0;
-        width: 400%;
-        margin: 0;
-        padding:0;
-        font-size: 0;
-        left: 0;
-        text-align: left;
-        animation: 15s slidy infinite;
+        color: white;
     }
-
-    .main-content-instagram-slider img {
-        width: 10%; height: auto;float: left;
-        height: 300px;
+    .main-content-instagram-responsive-logo1 {
+        padding-left: 20px;
     }
-
-    @keyframes slidy {
-        0% {left:0%;}
-        20% {left:0%;}
-        25% {left:-100%}
-        45%{left: -100%;}
-        50% {left:-200%;}
-        70% {left:200%;}
-        75% {left:300%;}
-        95% {left:-400%;}
+    .main-content-instagram-responsive-logo2 {
+        padding-left: 20px;
+    }
+    .main-content-instagram-responsive i:hover {
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -o-transform: scale(1.1);
+        transform: scale(1.1);
+        opacity: 1.3 ;
     }
 }
-*/
+
 
 
 /*  --------------   *\
