--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@
 }
 /*RESPONSIVE NAV */
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 415px) {
     .header-nav{
         display: none;
     }
@@ -180,7 +180,7 @@
     padding-top: 200px;
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 767px){
     .header-hero-image-home{
         height: 450px;
     }
@@ -197,7 +197,7 @@
     }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 414px) {
     .header-hero-image-logo{
         height: 5em;
     }
@@ -316,7 +316,7 @@ h1, h2, h3, h4 {
     .main-content-text{
         margin: -50px 0 0 0;
         width: 60px;
-        flex-grow: 0
+        flex-grow: 0;
     }
 }
 
@@ -422,7 +422,7 @@ h1, h2, h3, h4 {
     color: white;
     margin-bottom: 1em;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 768px) {
     .footer{
         margin-top: 0
     }
